# dreamnamer

./: .gitmodules  CMakeLists.txt  Episode.h  FileNameBuilder.cpp  FileNameBuilder.h  Index.cpp  Index.h  Info.plist.in  MainWindow.cpp  MainWindow.h  MainWindow.ui  MovieDatabaseQuery.cpp  MovieDatabaseQuery.h  README.md  Renamer.cpp  Renamer.h  Selector.cpp  Selector.h  Selector.ui  dreamnamer.rb  main.cpp
